<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/baseline_arrow_back_ios_24" />
        <TextView
            android:id="@+id/tvRegisterTitle"
            android:text="@string/label_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/tvRegisterSubtitle"
            android:text="@string/label_register_subtitle"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/colorDarkGrey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvRegisterTitle"
            app:layout_constraintStart_toStartOf="@id/tvRegisterTitle"/>
        <TextView
            android:id="@+id/tvNameLabel"
            android:textSize="14sp"
            android:textColor="@color/colorDarkGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/label_full_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLoginSubtitle" />

        <com.rifqi.sipalingstoryapp.ui.customview.FullNameEditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_bordered_edit_text"
            android:hint="@string/hint_full_name"
            android:maxLines="1"
            android:padding="16dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tvEmailLabel"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/tvEmailLabel"
            android:textSize="14sp"
            android:textColor="@color/colorDarkGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/label_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLoginSubtitle" />

        <com.rifqi.sipalingstoryapp.ui.customview.EmailEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_bordered_edit_text"
            android:hint="@string/hint_email"
            android:maxLines="1"
            android:padding="16dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tvEmailLabel"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/tvPasswordLabel"
            android:text="@string/label_password"
            android:textSize="14sp"
            android:textColor="@color/colorDarkGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/edtEmail"
            app:layout_constraintStart_toStartOf="@id/edtEmail"/>

        <com.rifqi.sipalingstoryapp.ui.customview.PasswordEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_bordered_edit_text"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="16dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tvPasswordLabel"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorPrimaryGreen"
            android:includeFontPadding="false"
            android:paddingVertical="16dp"
            android:text="@string/action_register"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtPassword"
            app:rippleColor="#40FFFFFF"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,VisualLintButtonSize" />

    </LinearLayout>

    <include
        android:id="@+id/loading_layout"
        android:visibility="gone"
        layout="@layout/layout_loading" />
</RelativeLayout>