<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.upload.UploadStoryActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:navigationIcon="@drawable/baseline_arrow_back_ios_24"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tx_food_image"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/label_photo_story"
                android:textSize="16sp" />

             <ImageView
                android:id="@+id/img_story_holder"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:background="@drawable/bg_dash_green_line"
                android:clickable="true"
                android:focusable="true"
                android:padding="16dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_add_photo"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/img_story"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="centerCrop"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_description"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/label_add_story_description"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_bordered_edit_text"
                android:gravity="top"
                android:hint="@string/hint_add_story_description"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLines="5"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textSize="14sp" />



            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_upload_story"
                android:backgroundTint="@color/colorPrimaryGreen"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:paddingVertical="16dp"
                android:text="@string/action_add_story"/>



        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <include
        android:id="@+id/loadingLayout"
        android:visibility="gone"
        layout="@layout/layout_loading"/>

</androidx.constraintlayout.widget.ConstraintLayout>